Corrected method SetUpLabels in secretCodeViewImpl